--- a/palpoht/client/static/style.css
+++ b/palpoht/client/static/style.css
@@ -27,6 +27,11 @@ body {
 	box-shadow: 0px 0px 10px #111;
 }
 
+#header a {
+	text-decoration: none;
+	color: #8bb008;
+}
+
 #bannerlogo {
 	font-size: 1.5em;
 	line-height: 80px;
@@ -114,12 +119,6 @@ body {
 	min-width: calc(50% - 5px);
 }
 
-.left {
-}
-
-.right {
-}
-
 .card-header {
 	color: #8bb008;
 	font-size: 1.2em;
@@ -153,6 +152,7 @@ body {
 	width: 100%;
 	height: 95px;
 	border: 1px #171a21 solid;
+	margin-bottom: 5px;
 }
 
 .search-result:hover {
@@ -220,13 +220,15 @@ body {
 	display: inline-block;
 	vertical-align: top;
 	padding-left: 5px;
+	max-width: calc(100% - 201px);
 }
 
 .search-result-name {
 	font-size: 1.2em;
+
 }
 
-.search-result-appid {
+.search-result-appid, .search-result-count {
 	font-size: 0.9em;
 	color: #8f8f8f;
 }
