--- a/palpoht/client/templates/client/header.html
+++ b/palpoht/client/templates/client/header.html
@@ -7,7 +7,7 @@
 	</header>
 	<body>
 		<div id="header">
-			<span id="bannerlogo" class="header">Steam Game Info Finder</span>
+			<span id="bannerlogo" class="header"><a href="/">Steam Game Info Finder</a></span>
 			<div id="search-container">
 				<span>Find a game:</span>
 				<input id="search-box" type="text"><button id="search-button" type="button">GO</button>
